2008-05-25  Bruno Haible  <bruno@clisp.org>

	* m4/signal.m4 (CL_SIGNALBLOCK): Remove macro.
	(CL_SIGNAL_UNBLOCK, CL_SIGNAL_BLOCK_OTHERS, CL_SIGACTION_UNBLOCK):
	Assume POSIX signal-blocking.
	* unix.d (SIGNALBLOCK_POSIX): Define always.
	* spvw.d (main): Assume SIGNALBLOCK_POSIX on Unix.
	* spvw_sigint.d (react_on_sigint): Likewise.
	* spvw_sigsegv.d (stackoverflow_handler): Likewise.
	* configure.in (CL_SIGNALBLOCK): Remove invocation.

2008-05-25  Bruno Haible  <bruno@clisp.org>

	* floatparam.c: Remove support for K&R C compilers.
	* intparam.c: Likewise.

2008-05-23  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1970141 ]: link.sh should respect $(MAKE)
	* makemake.in (base, full): set MAKE when calling clisp-link
	* modules/berkeley-db/link.sh.in, modules/bindings/glibc/link.sh:
	* modules/bindings/win32/link.sh, modules/clx/mit-clx/link.sh:
	* modules/clx/new-clx/link.sh.in, modules/dirkey/link.sh:
	* modules/fastcgi/link.sh, modules/gdbm/link.sh.in:
	* modules/gtk2/link.sh.in, modules/i18n/link.sh.in:
	* modules/libsvm/link.sh, modules/matlab/link.sh:
	* modules/netica/link.sh, modules/oracle/link.sh:
	* modules/pari/link.sh.in, modules/pcre/link.sh.in:
	* modules/postgresql/link.sh.in, modules/queens/link.sh:
	* modules/rawsock/link.sh.in, modules/readline/link.sh.in:
	* modules/regexp/link.sh.in, modules/syscalls/link.sh.in:
	* modules/wildcard/link.sh.in, modules/zlib/link.sh.in:
	use ${MAKE-make} instead of make

2008-05-22  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1956715 ]: segfault on SIGHUP
	* spvw_sigterm.d (quit_on_signal) [HAVE_SAVED_STACK]: restore STACK

2008-05-22  Sam Steingold  <sds@gnu.org>

	* modules/regexp/configure.in: remove AM_GNU_GETTEXT([external])
	(why was it there in the first place?!)

2008-05-22  Sam Steingold  <sds@gnu.org>

	* configure (--help-modules): more compact output,
	do not print anything for modules whose configure
	does not accept any --with.*prefix arguments

2008-05-21  Sam Steingold  <sds@gnu.org>
