@@ -1,3 +1,10 @@
+2008-05-25  Sam Steingold  <sds@gnu.org>
+
+	* spvw_sigint.d (signal_handler_prepare_for_lisp): extracted from
+	react_on_sigint()
+	(react_on_sigint): call it
+	* spvw_sigterm.d (quit_on_signal): ditto
+
 2008-05-25  Bruno Haible  <bruno@clisp.org>
 
 	* m4/signal.m4 (CL_SIGNALBLOCK): Remove macro.
